--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,26 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+  {
+    "source": "**/*.@(js|css|png|jpg|gif|svg)",
+    "headers": [
+      {
+        "key": "Cache-Control",
+        "value": "max-age=31536000, public, immutable"
+      }
+    ]
+  },
+  {
+    "source": "/index.html",
+    "headers": [
+      {
+        "key": "Cache-Control",
+        "value": "max-age=600, public, must-revalidate"
+      }
+    ]
+  }
     ]
   },
   "firestore": {
