--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy PWA Cookit para Firebase Hosting
+name: Deploy PWA Cookit para Firebase Hosting (TESTE DE ISOLAMENTO)
 
 # 7. Configuração do Trigger
 on:
@@ -20,20 +20,17 @@ jobs:
         with:
           node-version: '20' # Use uma versão LTS estável
 
-      # NOVO: 13. Autenticação com a Service Account (SA)
-      # Usa a chave JSON (em Base64 no Secret) para autenticar o ambiente
+      # 9. Autenticação com a Service Account (SA) - OK
       - name: Autenticar com Google Cloud (via Secret)
         uses: google-github-actions/auth@v2 
         with:
-          # Injeta o valor do nosso Secret FIREBASE_SERVICE_ACCOUNT_COOKIT 
-          # A Action lida com a descodificação do Base64
           credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_COOKIT }}
           
-      # 9. Instalação do Firebase CLI
+      # 10. Instalação do Firebase CLI - OK
       - name: Instalar Firebase CLI
         run: npm install -g firebase-tools
 
-      # 10. Deploy (SEM a flag --token)
-      - name: Deploy para Firebase Hosting e Regras
-        # O deploy usa as credenciais que foram injetadas no ambiente pela Action de Autenticação anterior.
-        run: firebase deploy --project cookit-83f40 --only hosting, firestore:rules
+      # 11. Deploy APENAS DE HOSTING (Teste de Isolamento)
+      - name: Deploy APENAS para Firebase Hosting
+        # Usamos --only hosting para ignorar o firestore:rules
+        run: firebase deploy --project cookit-83f40 --only hosting
