--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy PWA Cookit para Firebase Hosting
 on:
   push:
     branches:
-      - main # O deploy é acionado em push para o branch principal
+      - main 
 
 jobs:
   deploy:
@@ -16,20 +16,17 @@ jobs:
       - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Versão LTS estável
+          node-version: '20'
 
-      # 1. Autenticação Segura via Service Account
+      # Autenticação Segura via Service Account
       - name: Autenticar com Google Cloud (via Secret)
         uses: google-github-actions/auth@v2 
         with:
-          # A Action descodifica o Base64 do nosso Secret
           credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_COOKIT }}
           
       - name: Instalar Firebase CLI
         run: npm install -g firebase-tools
 
-      # 2. Deploy Final: Hosting E Regras
-      # O deploy usa as credenciais injetadas pela step anterior
-      - name: Deploy APENAS para Firebase Hosting
-        # Remover o 'firestore:rules' - O deploy de Hosting já funcionou.
-        run: firebase deploy
+      # Deploy Final: Apenas Hosting (o ID do projeto é lido do firebase.json)
+      - name: Deploy Final para Firebase Hosting
+        run: firebase deploy --only hosting
