--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,34 @@ name: Deploy PWA Cookit para Firebase Hosting
 on:
   push:
     branches:
-      - main 
+      - main # O deploy é acionado em push para o branch principal
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     
     steps:
-      # ... (Steps de Checkout, Node.js, Autenticar, Instalar CLI)
-      
-      # Restaurar a flag --project para forçar a identificação do projeto.
-      - name: Deploy Final para Firebase Hosting
-        # O comando deve incluir o ID do projeto, pois o CLI falha ao ler o firebase.json
-        run: firebase deploy --project cookit-83f40 --only hosting
+      - name: Checkout do Código
+        uses: actions/checkout@v4
+
+      - name: Configurar Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Versão LTS estável
+
+      # Autenticação Segura via Service Account (Usando o Secret)
+      - name: Autenticar com Google Cloud (via Secret)
+        uses: google-github-actions/auth@v2 
+        with:
+          # A Action descodifica o Base64 do Secret FIREBASE_SERVICE_ACCOUNT_COOKIT
+          credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_COOKIT }}
+          
+      # INSTALAÇÃO E DEPLOY COMBINADOS (Resolve o erro 'command not found' 127)
+      - name: Instalar CLI e Deploy Final para Hosting
+        run: |
+          # Instalação do Firebase CLI
+          npm install -g firebase-tools
+          
+          # Deploy Final: Apenas Hosting (ID do projeto é lido do firebase.json OU passado aqui)
+          # A Service Account autenticada na step anterior é usada automaticamente
+          firebase deploy --project cookit-83f40 --only hosting
