--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,22 @@
-name: Deploy PWA Cookit para Firebase Hosting
+# .github/workflows/firebase-hosting-deploy.yml
+
+name: Deploy to Firebase Hosting
 
 on:
   push:
     branches:
-      - main # O deploy é acionado em push para o branch principal
+      - main # A branch que irá desencadear o deploy
 
 jobs:
-  deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout do Código
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v4
+      # Ação para fazer o deploy para o Firebase Hosting
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          node-version: '20' # Versão LTS estável
-
-      # Autenticação Segura via Service Account (Usando o Secret)
-      - name: Autenticar com Google Cloud (via Secret)
-        uses: google-github-actions/auth@v2 
-        with:
-          # A Action descodifica o Base64 do Secret FIREBASE_SERVICE_ACCOUNT_COOKIT
-          credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_COOKIT }}
-          
-      # INSTALAÇÃO E DEPLOY COMBINADOS (Resolve o erro 'command not found' 127)
-      - name: Instalar CLI e Deploy Final para Hosting
-        run: |
-          # Instalação do Firebase CLI
-          npm install -g firebase-tools
-          
-          # Deploy Final: Apenas Hosting (ID do projeto é lido do firebase.json OU passado aqui)
-          # A Service Account autenticada na step anterior é usada automaticamente
-          firebase deploy --project cookit-83f40 --only hosting
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_TOKEN }}
+          projectId: cookit-83f40 # O ID do seu projeto
+          channelId: live # O canal de deploy (produção)
