--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main # A branch que irá desencadear o deploy
+      - main # A branch que irá desencadear o deploy (mude se usar outra)
 
 jobs:
   build_and_deploy:
@@ -20,7 +20,10 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          # O valor deste Secret DEVE ser a Chave JSON da Conta de Serviço
+          # CORREÇÃO: Passa o caminho da pasta de configuração
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_COOKIT }}
           projectId: cookit-83f40 # O ID do seu projeto Firebase
           channelId: live # O canal de deploy (produção)
+          
+          # NOVO: Indica o caminho da pasta de configuração e do ficheiro firebase.json
+          configId: infra/firebase.json
