--- a/Infra/firebase.json
+++ b/Infra/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": ".", 
+    "public": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -10,6 +10,17 @@
       {
         "source": "**",
         "destination": "/index.html"
+      }
+    ],
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=0, no-cache, no-store, must-revalidate"
+          }
+        ]
       }
     ]
   }
